Fix: sub-section layout on mobile devices

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -49,3 +49,9 @@ article#document > section {
 article#document > section:has(h4:first-child) {
   width: 47%;
 }
+
+@media(max-width: 750px) {
+  article#document > section:has(h4:first-child) {
+    width: 100%;
+  }
+}
